--- a/ok-template-ep-vue-v2/template/package.json
+++ b/ok-template-ep-vue-v2/template/package.json
@@ -19,7 +19,7 @@
   },
   "devDependencies": {
     "@yuanfudao/eslint-config-ok": "^4.0.0",
-    "@yuanfudao/ok-preset-vue-pc": "^4.0.0",
+    "@yuanfudao/ok-preset-vue": "^4.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.28.0",
     "lint-staged": "^10.5.1",
