--- a/ok-template-vue/template/package.json
+++ b/ok-template-vue/template/package.json
@@ -14,7 +14,7 @@
   },
   "devDependencies": {
     "@yuanfudao/eslint-config-ok": "^4.0.0",
-    "@yuanfudao/ok-preset-vue-pc": "^4.0.0",
+    "@yuanfudao/ok-preset-vue": "^4.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.28.0",
     "eslint-plugin-prettier": "^3.3.1",
