chron: vue-v3 readme change

--- a/ok-template-vue-v3/template/package.json
+++ b/ok-template-vue-v3/template/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "ok dev",
+    "dev": "ok dev",
     "build": "ok build",
     "lint": "ok lint"
   },
