--- a/ok-template-vue-v3/template/package.json
+++ b/ok-template-vue-v3/template/package.json
@@ -8,6 +8,7 @@
     "lint": "ok lint"
   },
   "dependencies": {
+    "@vue/compiler-sfc": "^3.0.11",
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.0",
@@ -18,9 +19,9 @@
     "@types/webpack-env": "^1.16.0",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
-    "@yuanfudao/eslint-config-ok": "^4.0.0",
-    "@yuanfudao/ok-preset-vue": "^4.0.0",
-    "@yuanfudao/ok-tsconfig": "^4.0.0",
+    "@yuanfudao/eslint-config-ok": "^4.2.0",
+    "@yuanfudao/ok-preset-vue": "^4.2.0",
+    "@yuanfudao/ok-tsconfig": "^4.2.0",
     "eslint": "^7.28.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
